--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -34,8 +34,4 @@ jobs:
       - run:
           name: Transfer Files
           command: |
-            if [ "${CIRCLE_BRANCH}" = "master" ];then
-              rsync -avze "ssh -o StrictHostKeyChecking=no" --exclude-from ".circleci/exclude.txt" --copy-links --checksum --delete . $UIKIT_SERVER
-            else
-              echo "Skipping deploy on branch ${CIRCLE_BRANCH}";
-            fi
+			ghr -t ${GITHUB_TOKEN} -u ${CIRCLE_PROJECT_USERNAME} -r ${CIRCLE_PROJECT_REPONAME} -c ${CIRCLE_SHA1} -delete ${VERSION} ./artifacts/
